--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "gulp-livereload": "^3.8.1",
     "gulp-open": "^2.0.0",
     "gulp-util": "^3.0.7",
+    "live-reload": "^1.1.0",
     "mongoose": "^4.6.1",
+    "q": "^1.4.1",
     "wiredep": "^4.0.0"
   }
 }
