--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "ui-router-styles": "^0.0.3",
     "foundation-sites": "^6.2.3",
     "toastr": "^2.1.3",
-    "angular-toastr": "^2.1.1"
+    "angular-toastr": "^2.1.1",
+    "underscore": "^1.8.3"
   }
 }
