--- a/bower.json
+++ b/bower.json
@@ -17,10 +17,13 @@
   "dependencies": {
     "angular": "^1.5.8",
     "angular-ui-router": "ui-router#^0.3.1",
-    "ui-router-styles": "^0.0.3",
     "foundation-sites": "^6.2.3",
     "toastr": "^2.1.3",
     "angular-toastr": "^2.1.1",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "angular-ui-router-styles": "^1.1.0"
+  },
+  "resolutions": {
+    "angular-ui-router": "^0.3.1"
   }
 }
