--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amazon-product-api": "^0.4.2",
     "body-parser": "^1.15.2",
+    "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "filepicker-js": "^2.4.18",
     "gulp": "^3.9.1",
@@ -22,6 +24,7 @@
     "mongoose": "^4.6.1",
     "multer": "^1.2.0",
     "q": "^1.4.1",
+    "twilio": "^2.11.0",
     "wiredep": "^4.0.0"
   }
 }
