--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
     "toastr": "^2.1.3",
     "angular-toastr": "^2.1.1",
     "underscore": "^1.8.3",
-    "angular-ui-router-styles": "^1.1.0"
+    "angular-ui-router-styles": "^1.1.0",
+    "angular-sanitize": "^1.5.8"
   },
   "resolutions": {
     "angular-ui-router": "^0.3.1"
