--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-open": "^2.0.0",
     "gulp-util": "^3.0.7",
     "live-reload": "^1.1.0",
+    "moment": "^2.15.1",
     "mongoose": "^4.6.1",
     "multer": "^1.2.0",
     "q": "^1.4.1",
