--- a/bower.json
+++ b/bower.json
@@ -14,16 +14,22 @@
     "test",
     "tests"
   ],
+  "overrides": {
+    "bulma": {
+      "main": [
+        "css/bulma.css"
+      ]
+    }
+  },
   "dependencies": {
     "angular": "^1.5.8",
     "angular-ui-router": "ui-router#^0.3.1",
-    "foundation-sites": "^6.2.3",
     "toastr": "^2.1.3",
     "angular-toastr": "^2.1.1",
     "underscore": "^1.8.3",
     "angular-ui-router-styles": "^1.1.0",
     "angular-filepicker": "^1.1.4",
-    "angular-twilio": "*"
+    "bulma": "^0.2.1"
   },
   "resolutions": {
     "angular-ui-router": "^0.3.1"
