--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "amazon-product-api": "^0.4.2",
     "body-parser": "^1.15.2",
+    "cron": "^1.1.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "filepicker-js": "^2.4.18",
@@ -21,6 +22,7 @@
     "gulp-open": "^2.0.0",
     "gulp-util": "^3.0.7",
     "live-reload": "^1.1.0",
+    "moment": "^2.15.1",
     "mongoose": "^4.6.1",
     "multer": "^1.2.0",
     "q": "^1.4.1",
