--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "angular-ui-router-styles": "^1.1.0",
     "angular-sanitize": "^1.5.8",
     "angular-filepicker": "^1.1.4",
-    "bulma": "^0.2.1"
+    "bulma": "^0.2.1",
+    "angular-xeditable": "^0.4.0"
   },
   "resolutions": {
     "angular-ui-router": "^0.3.1"
