--- a/package.json
+++ b/package.json
@@ -9,26 +9,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.3.0",
     "body-parser": "^1.15.2",
+    "connect-mongo": "^1.3.2",
     "cron": "^1.1.1",
     "dotenv": "^2.0.0",
     "express": "^4.14.0",
     "filepicker-js": "^2.4.18",
-    "bcryptjs": "^2.3.0",
-    "body-parser": "^1.15.2",
-    "connect-mongo": "^1.3.2",
-    "express": "^4.14.0",
-    "express-session": "^1.14.1",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
     "gulp-inject": "^4.1.0",
     "gulp-livereload": "^3.8.1",
     "gulp-open": "^2.0.0",
     "gulp-util": "^3.0.7",
+    "jwt-simple": "^0.5.0",
     "live-reload": "^1.1.0",
     "moment": "^2.15.1",
     "mongoose": "^4.6.1",
     "multer": "^1.2.0",
+    "passport": "^0.3.2",
     "q": "^1.4.1",
     "twilio": "^2.11.0",
     "wiredep": "^4.0.0"
