--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^4.6.1",
     "multer": "^1.2.0",
     "passport": "^0.3.2",
+    "passport-jwt": "^2.1.0",
     "q": "^1.4.1",
     "twilio": "^2.11.0",
     "wiredep": "^4.0.0"
