--- a/bower.json
+++ b/bower.json
@@ -34,7 +34,8 @@
     "angular-xeditable": "^0.4.0",
     "angular-local-storage": "^0.5.2",
     "moment": "^2.15.1",
-    "angular-datepicker": "^2.0.3"
+    "angular-datepicker": "^2.0.3",
+    "angular-momentjs": "^0.2.2"
   },
   "resolutions": {
     "angular-ui-router": "^0.3.1"
